# Empirical_stats_AS

./: .gitignore  README.md  pyproject.toml  quickstart.ipynb  requirements.txt  setup.py
Notebooks/: test_run.ipynb
empias/: SALMON_class.py  __init__.py  empirical_calc.py  main.py  salmon_analysis.py  utils.py
empias.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
estempias.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: benchmark_and_verify.py  benchmark_baseline.csv  benchmark_baseline_old.csv  compare_results.py  test_empirical_calc.py
