[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "empias"
version = "0.1.0"
description = "Empirical p-value calculation for alternative splicing analysis"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "User", email = "user@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.4",
    "scipy>=1.8",
    "joblib>=1.1",
    "plotly>=5.0",
    "statsmodels>=0.13"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8"
]

[project.urls]
Homepage = "https://github.com/Empirical_stats_AS/empias"
