[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "empias"
version = "1.0.0"
description = "Empirical p-value algorithm for ONT isoform analysis and alternative splicing quantification in Arabidopsis thaliana"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Lucas Servi", email = "lucasservi@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.4",
    "scipy>=1.8",
    "joblib>=1.1",
    "plotly>=5.0",
    "statsmodels>=0.13"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8"
]

[project.urls]
Homepage = "https://github.com/Lucas-Servi/Empirical_stats_AS"

[tool.setuptools.packages.find]
where = ["."]
include = ["empias*"]
